# chordstransposer

./: .gitignore  LICENSE.md  MANIFEST  README.md  Untitled.ipynb  config.py  pyproject.toml  scales  setup.py  songExample.txt  test.py  transposer.py
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
chordstransposer/: __init__.py  config.py  transposer.py
